--- a/package.json
+++ b/package.json
@@ -1,20 +1,23 @@
 {
-  "name": "projectalfams",
-  "type": "module",
-  "version": "0.0.1",
-  "scripts": {
-    "dev": "astro dev",
-    "start": "astro dev",
-    "build": "astro check && astro build",
-    "preview": "astro preview",
-    "astro": "astro"
-  },
-  "dependencies": {
-    "@astrojs/check": "^0.7.0",
-    "@astrojs/tailwind": "^5.1.0",
-    "@astrojs/vercel": "^7.6.0",
-    "astro": "^4.8.4",
-    "tailwindcss": "^3.4.3",
-    "typescript": "^5.4.5"
-  }
+    "name": "projectalfams",
+    "type": "module",
+    "version": "0.0.1",
+    "scripts": {
+        "dev": "astro dev",
+        "start": "astro dev",
+        "build": "astro check && astro build",
+        "preview": "astro preview",
+        "astro": "astro"
+    },
+    "dependencies": {
+        "@astrojs/check": "^0.7.0",
+        "@astrojs/react": "^3.3.4",
+        "@astrojs/tailwind": "^5.1.0",
+        "@astrojs/vercel": "^7.6.0",
+        "@fontsource-variable/onest": "^5.0.4",
+        "@fontsource/twinkle-star": "^5.0.20",
+        "astro": "^4.8.4",
+        "tailwindcss": "^3.4.3",
+        "typescript": "^5.4.5"
+    }
 }
